roles/cluster-defaults/templates/iptables
*filter

## ##################### SYSTEM IPTABLES #####################################
## default chains 
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

## lo interface iptables 
-A INPUT -i lo -j ACCEPT
-A FORWARD -i lo -j ACCEPT

## icmp traffic iptables
-A INPUT -p icmp -j ACCEPT

## ssh port iptables
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT

## basic state (related, established) iptables
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

# REF
#-A INPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT
#-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
#-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT


## ################# KUBERNETES CLUSTER SPECIFIC IPTABLES ############################

## INPUT chain - conntrack cstate (related, established) iptables
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

## FORWARD chain - conntrack cstate (related, established) optables
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# port - 22 tcp (ssh)
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT

# port - 53 udp (dns)
-A INPUT -p udp -m udp --dport 53 -m conntrack --ctstate NEW -j ACCEPT

# port - 67 udp outbound (dhcp)
-A INPUT -p udp -m udp --dport 67 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m udp --sport 67 -m conntrack --ctstate NEW -j ACCEPT

# port - 68 udp outbound (dhcp)
-A INPUT -p udp -m udp --dport 68 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m udp --sport 68 -m conntrack --ctstate NEW -j ACCEPT

## KUBE-APISERVER
# port- 443 tcp (https) - (kube-apiserver service listen port 443 tcp https)
-A INPUT -p tcp -m tcp --dport 443 -m conntrack --ctstate NEW -j ACCEPT

# port - 6443 tcp (kube-apiserver secure listen port 6443 tcp )
-A INPUT -p tcp -m tcp --dport 6443 -m conntrack --ctstate NEW -j ACCEPT

# port - 8080 tcp ( apiserver in-secure listen port for healthz)
# ALSO USED FOR COREDNS HEALTHZ TRAFFIC
-A INPUT -p tcp -m tcp --dport 8080 -m conntrack --ctstate NEW -j ACCEPT


## KUBE-CONTROLLER-MANGER
# port - 10252 tcp (kube-controller metrics secure https listen port 10252)
-A INPUT -p tcp -m tcp --dport 10252 -m conntrack --ctstate NEW -j ACCEPT
# port - 10257 tcp (kube-controller metrics in-secure http listen port 10257)
-A INPUT -p tcp -m tcp --dport 10257 -m conntrack --ctstate NEW -j ACCEPT

## KUBE-SCHEDULER
# port - 10251 tcp (kube-scheduler metrics in-secure http listen port 10251)
-A INPUT -p tcp -m tcp --dport 10251 -m conntrack --ctstate NEW -j ACCEPT
# port - 10259 tcp (kube-scheduler mestrics secure https listen port 10259)
-A INPUT -p tcp -m tcp --dport 10259 -m conntrack --ctstate NEW -j ACCEPT

## KUBELET
# port - 10250 tcp (kubelet http metrics port 10250 tcp)
#-A INPUT -p tcp -m tcp --dport 10250 -m conntrack --ctstate NEW -j ACCEPT
# port - 10248 tcp (kubelet http healthz port 10248 tcp in-secure http)
#-A INPUT -p tcp -m tcp --dport 10248 -m conntrack --ctstate NEW -j ACCEPT
# port - 4194 tcp (kubelet cadvisor http in-secure http traffic  port 4194 tcp)
#-A INPUT -p tcp -m tcp --dport 4194 -m conntrack --ctstate NEW -j ACCEPT

## KUBE-PROXY
# port - 10256 tcp (kube-proxy healthz traffic port 10256)
-A INPUT -p tcp -m tcp --dport 10256 -m conntrack --ctstate NEW -j ACCEPT
# port - 10249 tcp (kube-proxy metrics traffic port 10249)
-A INPUT -p tcp -m tcp --dport 10249 -m conntrack --ctstate NEW -j ACCEPT


## ETCD
## port - 2379, 2380 (etcd)
# port - 2379 tcp ( etcd listen port 2379)
-A INPUT -p tcp -m tcp --dport 2379 -m conntrack --ctstate NEW -j ACCEPT
# port - 2380 (etcd peer listen port 2380)
-A INPUT -p tcp -m tcp --dport 2380 -m conntrack --ctstate NEW -j ACCEPT
# port - 4001 (etcd local in-secure listen port 4001)
-A INPUT -p tcp -m tcp --dport 4001 -m conntrack --ctstate NEW -j ACCEPT


## COREDNS/KUBE-DNS
# port - 9153 tcp (coredns docker prometheus traffics port 9153 tcp)
-A INPUT -p tcp -m tcp --dport 9153 -m conntrack --ctstate NEW -j ACCEPT
# port - 9153 udp (coredns docker prometheus traffics port 9153 udp)
-A INPUT -p udp -m udp --dport 9153 -m conntrack --ctstate NEW -j ACCEPT
# port - 8080 tcp (coredns in-secure healthz traffics port 8080 tcp)
# DEFINED IN KUBE-APISERVER SECTION
#-A INPUT -p tcp -m tcp --dport 8080 -m conntrack --ctstate NEW -j ACCEPT

## KUBE-DNS
# port - 10053 udp (kube-dns  traffics port 10053 udp)
-A INPUT -p udp -m udp --dport 10053 -m conntrack --ctstate NEW -j ACCEPT
# port - 10053 tcp (kube-dns traffics port 10053 tcp)
-A INPUT -p tcp -m tcp --dport 10053 -m conntrack --ctstate NEW -j ACCEPT
# port - 10054 tcp (kube-dns traffics port 10054 tcp)
-A INPUT -p tcp -m tcp --dport 10054 -m conntrack --ctstate NEW -j ACCEPT
# port - 10055 tcp (kube-dns traffics port 10055 tcp)
-A INPUT -p tcp -m tcp --dport 10055 -m conntrack --ctstate NEW -j ACCEPT
# port - 8081 tcp (kube-dns healthz traffics port 8081 tcp)
-A INPUT -p tcp -m tcp --dport 8081 -m conntrack --ctstate NEW -j ACCEPT


## KUBE-ROUTER SPECIFIC
# port - 20244 tcp (kube-router healthz listen port 20244)
-A INPUT -p tcp -m tcp --dport 20244 -m conntrack --ctstate NEW -j ACCEPT
# port - 179 tcp inbound/outbound (BGP traffic listen port 179)
-A INPUT -p tcp -m tcp --dport 179 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --sport 179 -m conntrack --ctstate NEW -j ACCEPT

## CALICO NETWORKING
# port - 9099 tcp (calico liveness listen port 9099)
-A INPUT -p tcp -m tcp --dport 9099 -m conntrack --ctstate NEW -j ACCEPT
# port - 6666 tcp inbound/outbound (calico self-hosting etcd traffic port 6666)
-A INPUT -p tcp -m tcp --dport 6666 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --sport 6666 -m conntrack --ctstate NEW -j ACCEPT
# port - 6667 tcp inbound/outbound (calico self-hosting etcd traffic port 6666)
-A INPUT -p tcp -m tcp --dport 6667 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --sport 6667 -m conntrack --ctstate NEW -j ACCEPT

## FLANNEL
# port - 8472, 8285 udp (flannel pod traffic udp port 8272,8285)
-A INPUT -p udp -m udp --dport 8472 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m udp --dport 8285 -m conntrack --ctstate NEW -j ACCEPT

## ############### KUBERNETES ADDON SYSTEM SPECIFIC IPTABLES ##########################


## ############### KUBERNETES APPLICATIONS SPECIFIC IPTABLES ##########################


## ############### FINAL DEFAULT REJECT IPTABLES ######################################
-A INPUT -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -j ACCEPT

COMMIT
